--- a/public/trump/style.css
+++ b/public/trump/style.css
@@ -50,6 +50,10 @@ p {
 	margin: 0 20px;
 }
 
+a {
+	color: #4fa0ff;
+}
+
 section {
 	height: 100vh;
 	width: 100%; /* To prevent 300vw Safari error */
@@ -64,15 +68,16 @@ section {
 }
 
 article {
-	padding: 25px 10px;
+	padding: 15px 10px;
 	height: 100%;
 }
 
 img {
-	width: 10em;
-	height: 10em;
-	margin: 10px auto 20px;
-	border-radius: 50%;
+	width: auto;
+	max-width: 100%;
+    height: 140px;
+    margin: 0 auto 20px;
+    border-radius: 3px;
 }
 
 #message {
@@ -118,7 +123,7 @@ img {
 /* SPLASH SCREEN
 / =============================================================================== */
 #splash-screen {
-	background-color: #E74748;
+	background-color: #A31400;
 	color: #FFF;
 	text-align: center;
 	z-index: 0;
@@ -126,19 +131,6 @@ img {
 
 #splash-screen article {
 	padding: 10px;
-}
-
-#splash-screen img {
-	background-color: #FFF;
-}
-
-#splash-screen .logo,
-#intro-screen .logo {
-	background-color: transparent;
-	border-radius: 0px;
-	margin: 10px auto 0;
-	height: 15px;
-	width: auto;
 }
 
 #splash-screen small {
@@ -151,10 +143,10 @@ img {
 	margin-bottom: 10px;
 }
 
-#splash-screen.landing-screen {
-	background: -webkit-radial-gradient( circle, #F72401, #A31400 ); /* Safari */
-	background: -moz-radial-gradient( circle, #F72401, #A31400 ); /* Firefox 3.6 to 15 */
-	background: radial-gradient( circle, #F72401, #A31400 ); /* Standard syntax */
+#splash-screen.landing-screen {	
+	background: #A31400 url('images/opening.png') bottom center no-repeat;
+	background-size: cover;
+	-o-background-size: cover;
 }
 
 #splash-screen .splash-text-wrapper {
@@ -170,33 +162,34 @@ img {
 	-ms-justify-content: center;
 	justify-content: center;
 
-	-webkit-flex: 1 1 65%;
-	-ms-flex: 1 1 65%;
+	-webkit-flex: 1 1 0;
+	-ms-flex: 1 1 0;
 	flex-grow: 1;
 	flex-shrink: 1;
-	flex-basis: 65%;
+	flex-basis: 0;
 }
 
 #splash-screen.landing-screen h2 {
-	text-align: center;
-	font-weight: 600;
+	text-align: left;
+	font-weight: 400;
 	text-shadow: 0px 2px 2px rgba( 0, 0, 0, 0.5 );
-}
-
-#splash-screen.landing-screen h2:first-of-type {
-	font-size: 6.5em;
-	line-height: 1.2em;
-	-webkit-transform: rotate( 353deg );
-	transform: rotate( 353deg );
-}
-
-#splash-screen.landing-screen h2:last-of-type {
 	font-size: 3em;
 	line-height: 1.1em;
-	-webkit-transform: rotate( 5deg );
-	transform: rotate( 5deg );
-	padding-top: 10px;
+	padding: 0;
+	margin: 0 3px;
 	margin-bottom: 0;
+}
+
+#splash-screen.landing-screen h2 span {
+	font-size: 1.2em;
+	font-weight: 600;
+	line-height: 1.2em;
+}
+
+.langchange {
+	color: #4fa0ff !important;
+	font-size: 1.5em;
+	margin: 10px auto;
 }
 
 .landing-screen .btn {
@@ -216,25 +209,6 @@ img {
 	padding-top: 5px;
 }
 
-#splash-screen .logo-icon,
-#intro-screen .logo-icon {
-	width: 46px;
-	height: 40px;
-	display: block;
-	background-size: auto 40px;
-	margin: 20px auto 10px;
-
-}
-
-#splash-screen .logo-icon {
-	background-image: url( './images/assets/logo-white.png' );
-	opacity: 0.5;
-}
-
-#intro-screen .logo-icon {
-	background-image: url( './images/assets/logo.png' );
-}
-
 /* INTRO SCREEN
 / =============================================================================== */
 #intro-screen h2 {
@@ -243,15 +217,24 @@ img {
 }
 
 .img-red {
-	background-color: #E74748;
+	background-color: #A31400;
 }
 
 .img-white {
 	background-color: #FFF;
 }
 
+.img-full {
+	border-radius: 0;
+    height: 150px;
+    width: auto;
+}
+
 #splash-screen .normal-image {
 	border-radius: 0;
+	height: auto;
+	width: 100%;
+	margin: 0;
 	background-color: transparent;
 }
 
@@ -295,16 +278,19 @@ img {
 	flex-basis: auto;
 }
 
-.final-screen .btn-list {
-	display: none;
-}
-
 /* LEARN MORE SCREEN
 / =============================================================================== */
 
+#splash-screen.learn-more-screen {
+	background: #fff;
+	color: #A31400;
+	text-transform: uppercase;
+}
+
 #splash-screen.learn-more-screen h2 {
-	font-size: 1.6em;
+	font-size: 1.7em;
 	line-height: 1.75em;
+	padding: 35px 10px;
 }
 
 #splash-screen.learn-more-screen small {
@@ -318,18 +304,15 @@ img {
 #splash-screen.learn-more-screen .normal-image {
 	width: 150px;
 	height: 150px;
+	margin: 0 auto;
+}
+
+#splash-screen.learn-more-screen .btn-list {
+	display: none;
 }
 
 #splash-screen.learn-more-screen .logo {
-	background-image: url( './images/assets/logo-white.png' );
-	width: 125px;
-	height: 29px;
-	background-size: cover;
-	margin-bottom: 25px;
-}
-
-#splash-screen.learn-more-screen.smaller-screen .logo {
-	display: none;
+	padding: 0 10px;
 }
 
 #splash-screen.learn-more-screen.smaller-screen h2 {
@@ -368,18 +351,34 @@ img {
 	line-height: 44px;
 	font-weight: 600;
 	padding: 0 10px;
+	border-radius: 3px;
+	box-shadow: 1px 1px 3px #bbb;
 
 	-webkit-transition: all 300ms linear;
 	transition: all 300ms linear;
 }
 
+.choice .btn {
+	color: #fff;
+	font-size: 2em;
+}
+.true .btn {
+	background: #5DB900 url('./images/assets/tick.png') center center no-repeat;
+	background-size: 50px;
+}
+
+.false .btn {
+	background: #D30000 url('./images/assets/cross.png') center center no-repeat;
+	background-size: 40px;
+}
+
 .btn-white {
 	background-color: #FFF;
-	color: #E74748;
+	color: #A31400;
 }
 
 .btn-red {
-	background-color: #E74748;
+	background-color: #B11108;
 	color: #FFF;
 }
 
@@ -388,11 +387,11 @@ img {
 }
 
 .choice {
-	margin-bottom: 2px;
+	margin-bottom: 6px;
 
-	-webkit-flex-direction: row;
-	-ms-flex-direction: row;
-	flex-direction: row;
+	-webkit-flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
 }
 
 .choice,
@@ -400,13 +399,10 @@ img {
 	display: -webkit-flex;
 	display: -ms-flex;
 	display: flex;
-
-	overflow: hidden;
 }
 
 .clicked .btn,
 .choice:focus .btn {
-	background-color: #E74748;
 	color: #FFF;
 }
 
@@ -440,8 +436,8 @@ img {
 .progress-bar,
 .progress-bar-inner {
 	height: 30px;
-	background-color: #999;
-	color: #FFF;
+	background-color: #FFF;
+	color: #666;
 	font-size: 10px;
 	line-height: 30px;
 	text-align: center;
@@ -460,37 +456,56 @@ img {
 	display: block;
 	top: 0;
 	left: 0;
-	background-color: #E74748;
+	background-color: #f2f2f2;
 	z-index: -1;
 	height: 100%;
 }
 
 /* MESSAGES
 / =============================================================================== */
+
+.correct, .incorrect {
+	text-transform: uppercase;
+	font-size: 2em;
+	font-weight: bold;
+	text-align: center;
+}
+
 .correct {
-	color: #B2D43D;
+	color: #65B600;
 }
 
 .incorrect {
-	color: #E74748;
+	color: #D10202;
 }
 
-.final-screen .character {
-	margin: 0 auto;
-	width: 125px;
-	height: 125px;
+.final-screen .readmore {
+	background: #fff;
+	background: rgba(256,256,256,0.9);
+    color: #A31400;
+    padding: 20px 0;
+    border-radius: 3px;
 }
 
 .final-screen p {
 	margin: 0 10px;
 }
 
-@media screen and ( max-width: 840px ) {
+.final-screen .welldone {
+	background: transparent url('./images/welldone.png') bottom center no-repeat;
+	background-size: contain;
+	-o-background-size: contain;
+}
 
-	#message br {
-		display: none;
-	}
+.final-screen .fired {
+	background: transparent url('./images/fired.png') bottom center no-repeat;
+	background-size: contain;
+	-o-background-size: contain;
+}
 
+.final-screen .level-message {
+	font-size: 3em;
+	text-transform: uppercase;
 }
 
 
@@ -590,14 +605,6 @@ img {
 
 }
 
-@media screen and ( max-height: 568px ) {
-
-	#splash-screen.learn-more-screen .logo {
-		display: none;
-	}
-
-}
-
 /* IPHONE 4 MEDIA QUERY TO PREVENT HEIGHT OVERFLOW
 / =============================================================================== */
 @media screen and ( max-height: 480px ) {
@@ -610,13 +617,9 @@ img {
 		padding: 10px;
 	}
 
-	.final-screen .character {
-		width: 100px;
-		height: 100px;
-	}
-
-	.final-screen h2 {
-		font-size: 2.25em;
+	.final-screen .level-message {
+		font-size: 2.5em;
+		text-transform: uppercase;
 		margin-left: 0;
 		margin-right: 0;
 	}
