--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,7 @@ h1 {
 }
 
 h2 {
-	font-size: 1.8em;
+	font-size: 1.6em;
 	font-weight: 400;
 	margin: 0 20px 10px;
 }
@@ -143,7 +143,7 @@ img {
 	margin-bottom: 10px;
 }
 
-#splash-screen.landing-screen {	
+#splash-screen.landing-screen {
 	background: #A31400 url('images/opening.png') bottom center no-repeat;
 	background-size: cover;
 	-o-background-size: cover;
@@ -226,7 +226,7 @@ img {
 
 .img-full {
 	border-radius: 0;
-    height: 150px;
+    height: 190px;
     width: auto;
 }
 
@@ -312,6 +312,8 @@ img {
 }
 
 #splash-screen.learn-more-screen .logo {
+	height: 50px;
+	margin-top: 50px;
 	padding: 0 10px;
 }
 
@@ -328,11 +330,11 @@ img {
 .btn-list {
 	width: 100%;
 
-	-webkit-flex: 1 0 auto;
-	-ms-flex: 1 0 auto;
+	-webkit-flex: 1 0 0;
+	-ms-flex: 1 0 0;
 	flex-grow: 1;
 	flex-shrink: 0;
-	flex-basis: auto;
+	flex-basis: 0;
 
 	-webkit-justify-content: flex-end;
 	-ms-justify-content: flex-end;
@@ -504,7 +506,7 @@ img {
 }
 
 .final-screen .level-message {
-	font-size: 3em;
+	font-size: 2.5em;
 	text-transform: uppercase;
 }
 
